use "user" for people and "account" as collective noun
collective noun for users, organisations, etc
