# api/internal/domain/account/endpoint.go
@@ -1,4 +1,4 @@
-package user
+package account
 
 import (
 	"github.com/pkg/errors"
@@ -9,7 +9,7 @@ type Endpoint struct {
 	repo Repo
 }
 
-type AccountCreateRequest struct {
+type UserCreateRequest struct {
 	Name string
 }
 
@@ -17,27 +17,27 @@ func NewEndpoint(repo Repo) (*Endpoint, error) {
 	return &Endpoint{repo: repo}, nil
 }
 
-func (e *Endpoint) CreateAccount(ctx domain.Context, req AccountCreateRequest) (*AccountModel, error) {
-	return e.repo.CreateAccount(ctx, Account{Name: req.Name})
+func (e *Endpoint) CreateUser(ctx domain.Context, req UserCreateRequest) (*UserModel, error) {
+	return e.repo.CreateUser(ctx, User{Name: req.Name})
 }
 
-type AccountGetRequest struct {
+type UserGetRequest struct {
 	Id string
 }
 
-func (e *Endpoint) GetAccount(ctx domain.Context, req AccountGetRequest) (*AccountModel, error) {
-	return e.repo.GetAccount(ctx, req.Id)
+func (e *Endpoint) GetUser(ctx domain.Context, req UserGetRequest) (*UserModel, error) {
+	return e.repo.GetUser(ctx, req.Id)
 }
 
 type OrganizationCreateRequest struct {
-	Name           string
-	OwnerAccountId string
+	Name        string
+	OwnerUserId string
 }
 
 func (e *Endpoint) CreateOrganization(ctx domain.Context, req OrganizationCreateRequest) (*OrganizationModel, error) {
-	member, err := e.repo.GetAccount(ctx, req.OwnerAccountId)
+	member, err := e.repo.GetUser(ctx, req.OwnerUserId)
 	if err != nil {
-		return nil, errors.Wrap(err, "Owning account")
+		return nil, errors.Wrap(err, "Owning user")
 	}
 
 	return e.repo.CreateOrganization(ctx, Organization{
